--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: whitesmoke;
+    background-color: rgb(239, 233, 239);
 }
 
 header {
@@ -15,12 +15,13 @@ header {
 }
 
 h1 {
-    background-color:#73B793;
+    background-color: #73B793;
     color: black;
+    text-indent: 60px;
 }
 
 nav ul {
-    color:#73B793;
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -30,113 +31,99 @@ nav ul {
 
 }
 
+
+#top-banner {
+
+    width: 100%;
+    height: 400px;
+    padding: 2rem;
+
+}
+
+.mid-banners {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;  
+   
+
+}
+
 h2 {
     text-decoration: underline;
-    display: flex;
-    flex-wrap: wrap;
+    font-weight: bold;
     font-size: 32px;
-    align-content: center;
+    text-align: right;
     padding-left: 30px;
-    border-right: black;
-    border-style: solid;
-    border-top: white;
-    border-bottom: white;
-    border-left: white;
     padding: 10px;
 }
 
-/* .card-class {
-    display: block;
-    flex-wrap: wrap;
-
-} */
-
-/* .subtitle {
-    height: 180px;
-    text-align: right;
-    background-image: image ("./New folder\65880ba817440640c500bc0c6c7ac46f.jpg");
-
-} */
-
-
-.botright {
- position:absolute;
-    bottom: 8px;
-    right: 16px;
-  }
 
 .about-me {
     display: flex;
     padding: 2rem;
 
+
 }
 
 .work {
     display: flex;
-    flex-wrap: wrap;
+
     flex-direction: row;
+    flex-wrap: wrap;
     padding: 2rem;
     width: 100%;
     height: auto;
 }
 
-#top-banner {
-
-    width: auto;
-    height: auto;
-    padding: 2rem;
 
 
-}
-
-#top-banner img {
-    width: fit-content;
-    max-height: fit-content;
-
-}
-
-#mid-banner {
+.card-box {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
-    width: auto;
-    height: 250px;
-    padding: 2rem;
-    justify-content:space-evenly;
-
-
-    
-}
-
-
-.content section {
-    border: 1px solid green;
-
+    flex-wrap: wrap;
+    width: 85%;
 
 }
+
 
 .left {
-    width: 20%;
-    border: 1px solid yellow;
+    width: 15%;
+
 }
 
 .right {
-    width: 80%;
-    border: 1px solid rebeccapurple
+    width: 85%;
+    padding: 2rem;
+    border-left: 5px solid black;
 }
+
+.intro {
+    font-size: 24px;
+
+}
+
 
 .interest {
     display: flex;
+
+    flex-direction: column;
     flex-wrap: wrap;
     width: auto;
-    margin: 60px;
+    margin: 30px;
     padding: 2rem;
-     border: 4px solid #305D45;
+    border: 4px solid #305D45;
 }
 
 .interest:hover {
     background-color: gray;
 }
+
+.large-box {
+    width: 100%;
+    height: 400px;
+
+}
+
 
 .contact {
     width: 100%;
