--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
     background-color: rgb(239, 233, 239);
 }
@@ -10,7 +11,6 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 2rem;
 
 }
 
@@ -32,18 +32,15 @@ nav ul {
 }
 
 
-#top-banner {
-
-    width: 100%;
-    height: 400px;
-    padding: 2rem;
-
-}
 
 .mid-banners {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;  
+    flex-wrap: wrap;
+    padding: 1rem;
+    gap: 1rem;
+    justify-content: center;
+
+
    
 
 }
@@ -67,34 +64,32 @@ h2 {
 
 .work {
     display: flex;
-
     flex-direction: row;
     flex-wrap: wrap;
     padding: 2rem;
-    width: 100%;
-    height: auto;
 }
 
 
 
 .card-box {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     width: 85%;
+padding-left: 4rem;
+
 
 }
 
 
 .left {
     width: 15%;
-
+border-right: 5px solid black;
 }
 
 .right {
     width: 85%;
     padding: 2rem;
-    border-left: 5px solid black;
+
 }
 
 .intro {
@@ -105,17 +100,23 @@ h2 {
 
 .interest {
     display: flex;
-
     flex-direction: column;
-    flex-wrap: wrap;
-    width: auto;
     margin: 30px;
     padding: 2rem;
     border: 4px solid #305D45;
+    max-width: 70rem;
+    min-width: 20rem;
+    align-items: center;
 }
 
 .interest:hover {
     background-color: gray;
+}
+
+.small-interest {
+    max-width: 30rem;
+    min-width: 10rem;
+
 }
 
 .large-box {
@@ -133,4 +134,8 @@ h2 {
     justify-content: space-between;
     padding: 2rem;
 
+}
+
+img {
+    width: 100%;
 }
